--- a/testcalc.html
+++ b/testcalc.html
@@ -30,10 +30,12 @@
 
  <div id= "all">
 <div >
-<input type="button" class="bksp" value='CE' onclick='clear()'></input>
+<input type="button" class="bksp" value='CE' onclick='clearOne()'></input>
 <!--<input class="bksp" type="button" value="C"></input>-->
 <button type="button" class="bksp" value='c' onclick='toScreen("c")'>C</button>
-<button type="button" class="clear" value='x^2' onclick='power()'>x^2</button>
+<button type="button" class="square" value='x^2' onclick='power()'>x^2</button>
+<button type="button" class="square" value='x½' onclick='sqrtOf()'>x<em>rt</em></button>
+<button type="button" class="square" value='1/x' onclick='inverseOf()'>1/x</button>
 
 </div>
 <div>
@@ -62,9 +64,10 @@
 <div>
 <!--<button type="button" class="equals">=</button>-->
 <button type="button" class="equals" value='=' onclick='equal()'>=</button>
-<button type="button" class="button">()</button>
+<button type="button" class="bracket" value='(' onclick='toScreen("(")'>(</button>
+<button type="button" class="bracket" value=')' onclick='toScreen(")")'>)</button>
+<button type="button" class="button" value='+-' onclick='plusminus()'>(+/-)</button>
 
-<button type="button" class="button">(+/-)</button>
 </div>
 </form>
 </div>
@@ -80,7 +83,7 @@ function myPower() {
 
 	document.getElementById("power").innerHTML = "ON";
 	document.getElementById("power").style.background='#3e8e41';
-	 document.getElementById("input").reset();
+	document.getElementById("input").reset();
 		
 }
 
@@ -94,8 +97,43 @@ function toScreen(x) {
 	}
 }
 
+function equal(){
 
+	x=screen.value;
+	x=eval(x);//eval is used to evaluate a string. this sets it as x
+	screen.value=x;
+	
+}
 
+function power(){
+//this just multiples whatever is on the screen by itself
+	x= screen.value;
+	x=eval(x*x);
+	screen.value=x;
+
+}
+function clearOne(){
+	
+	var screenNum = screen.value;
+	var len= screenNum.length-1;
+	var backOne = screenNum.substring(0,len);
+	screen.value = backOne;
+}
+
+function sqrtOf() {
+
+	x=screen.value;
+	x = Math.sqrt(x);
+	screen.value=x;
+}
+
+function inverseOf(){
+
+	x=screen.value;
+	x = 1/x;
+	screen.value=x;
+
+}
 
 
 </script>
@@ -203,7 +241,7 @@ font-size: 40px;
 	
 .bksp{
 	height: 50px;
-	width: 97px;
+	width: 70px;
 	border-radius: 10px;
 	background-color: #960F0F;
     border: none;
@@ -222,9 +260,9 @@ font-size: 40px;
 	background-color: #3e8e41;
 	transform: translateY(4px);
 }
-.clear{
+.square{
 	height: 50px;
-	width: 97px;
+	width: 40px;
 	border-radius: 10px;
 	background-color: #960546;
     border: none;
@@ -236,10 +274,10 @@ font-size: 40px;
     cursor: pointer;
 	vertical-align:middle;
 }
-.clear:hover {
+.square:hover {
    background-color: #3e8e41;
 }
-.clear:active{
+.square:active{
 	background-color: #3e8e41;
 	transform: translateY(4px);
 }
@@ -262,7 +300,7 @@ font-size: 40px;
    background-color: #3e8e41;
 }
 .zero:active{
-	background-color: #3e8e41;
+	background-color: yellow;
 	transform: translateY(4px);
 }
 
@@ -286,6 +324,21 @@ font-size: 40px;
 .equals:active{
 	background-color: #3e8e41;
 	transform: translateY(4px);
+}
+.bracket{
+	height:65px;
+    width:30px;
+	border-radius: 20px;
+    background-color: #1B202C;
+    border: none;
+    color: white;
+	font-size: 30px;
+
+    display: inline;
+    
+    margin: 4px 4px;
+    cursor: pointer;
+
 }
 
 </style>
