--- a/testcalc.html
+++ b/testcalc.html
@@ -4,6 +4,8 @@
 <head>
 <title>Online Calculator Project</title>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<script src="bower_components\angular\angular.js"></script>
+
 <!--<script type="text/javascript" src="script.js"></script>
 <script src="mainController.js"></script>-->
 
